--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,10 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.follow-count {
+  small {
+    display: block;
+    font-size: 1rem;
+  }
+}
